Qmaps 1775 fix suggest overlap route results (#853)
* Ensure direction suggestions appear above the result panel

* Ensure maximized result panel can't get under form

* Fix undefined ref error

* use ref cb to set marginTop

* Panel : Handle marginTop updates

--- a/src/scss/includes/direction-panel.scss
+++ b/src/scss/includes/direction-panel.scss
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     padding-top: 20px;
+    z-index: 1;
 
     .direction-close {
       display: flex;
